Fixed scrollbars appearing when they shouldn't on Chromium based browsers.

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,7 +17,7 @@ html, body, #app, .root {
         box-sizing: border-box;
         color: $foreground;
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
         padding: none;
         margin: none;
 
